Changed some things

--- a/src/app/modules/auth/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/sign-in/sign-in.component.html
@@ -95,7 +95,7 @@
                     mat-flat-button
                     [color]="'primary'"
                     [disabled]="signInForm.disabled"
-                    (click)="signIn()">
+                    (click)="connectToWallet()">
                     <span *ngIf="!signInForm.disabled">
                         Entra bro
                     </span>
