--- a/src/app/layout/common/user/user.component.html
+++ b/src/app/layout/common/user/user.component.html
@@ -1,7 +1,7 @@
 <!-- Button -->
 <button mat-button
     [matMenuTriggerFor]="userActions">
-        <span *ngIf="user.email">{{user.email}}</span>
+        <span *ngIf="user.address">{{user.address}}</span>
         <span *ngIf="!user">Connect your wallet</span>
 </button>
 
@@ -11,7 +11,7 @@
     <button mat-menu-item>
         <span class="flex flex-col leading-none">
             <span>Signed in as</span>
-            <span class="mt-1.5 text-md font-medium">{{user.email}}</span>
+            <span class="mt-1.5 text-md font-medium">{{user.address}}</span>
         </span>
     </button>
     <mat-divider class="my-2"></mat-divider>
